Added live stats code

--- a/index.html
+++ b/index.html
@@ -9,5 +9,15 @@
 <body>
     <h1>Explorers CT</h1>
     <button>Explore</button>
+
+    <!-- Begin Web-Stat code v 6.3 -->
+    <span id="wts1852487">&nbsp;</span><script>
+        var wts=document.createElement('script');wts.type='text/javascript';
+        wts.async=true;wts.src='https://wts.one/4/1852487/log6_2.js';
+        document.getElementById('wts1852487').appendChild(wts);
+        </script><noscript><a href="https://www.web-stat.com">
+        <img src="https://wts.one/6/4/1852487.gif" 
+        style="border:0px;" alt="Web-Stat web traffic analysis"></a></noscript>
+    <!-- End Web-Stat code v 6.3 -->
 </body>
 </html>
