--- a/index.html
+++ b/index.html
@@ -10,14 +10,6 @@
     <h1>Explorers CT</h1>
     <button>Explore</button>
 
-    <!-- Begin Web-Stat code v 6.3 -->
-    <span id="wts1852487">&nbsp;</span><script>
-        var wts=document.createElement('script');wts.type='text/javascript';
-        wts.async=true;wts.src='https://wts.one/4/1852487/log6_2.js';
-        document.getElementById('wts1852487').appendChild(wts);
-        </script><noscript><a href="https://www.web-stat.com">
-        <img src="https://wts.one/6/4/1852487.gif" 
-        style="border:0px;" alt="Web-Stat web traffic analysis"></a></noscript>
-    <!-- End Web-Stat code v 6.3 -->
+    <script type="text/javascript" src="//ra.revolvermaps.com/0/0/6.js?i=0ls2w8s26xa&amp;m=7&amp;c=e63100&amp;cr1=ffffff&amp;f=arial&amp;l=0&amp;bv=90&amp;lx=-420&amp;ly=420&amp;hi=20&amp;he=7&amp;hc=a8ddff&amp;rs=80" async="async"></script>
 </body>
 </html>
