Replaced the web stats

--- a/live-analytics.html
+++ b/live-analytics.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Stats - Explorers CT</title>
+    <title>Visitors Analytics - Explorers CT</title>
     <script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101169954);</script>
     <script async src="//static.getclicky.com/js"></script>
 </head>
 <body>
     
-    <!-- To be done -->
-    Here shall be included some web stats.
+    <h1>Visitors Globe</h1>
+
+    <script type="text/javascript" src="//ra.revolvermaps.com/0/0/6.js?i=0ls2w8s26xa&amp;m=7&amp;c=e63100&amp;cr1=ffffff&amp;f=arial&amp;l=0&amp;bv=90&amp;lx=-420&amp;ly=420&amp;hi=20&amp;he=7&amp;hc=a8ddff&amp;rs=80" async="async"></script>
 
 </body>
 </html>
