Added style.css and extra information

--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Explore the unknown - Explorers CT</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Explorers CT</h1>
-    <a href=""></a>
-    <button>Explore</button>
+    <p>Welcome to Explorers City. At the moment this website is in an experimental stage. You can watch me building it live on websites like <a href="https://www.youtube.com/channel/UC0ZkjfLwddZ_hsQx8oTPZXA/live" target="_blank">Youtube</a> or <a href="https://www.twitch.tv/explorersct" target="_blank">Twitch</a>.</p>
+    
+    <h2>To Do</h2>
+    <button>Explore Button</button>
+    <button>Live Analytics</button>
 
 </body>
 </html>
