--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Explorer City. Where creators and explorers meet.">
     <title>Explore the unknown - Explorers CT</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,7 +13,7 @@
     <p>Welcome to Explorers City. At the moment this website is in an experimental stage. You can watch me building it live on websites like <a href="https://www.youtube.com/channel/UC0ZkjfLwddZ_hsQx8oTPZXA/live" target="_blank">Youtube</a> or <a href="https://www.twitch.tv/explorersct" target="_blank">Twitch</a>.</p>
     
     <h2>To Do</h2>
-    <button>Explore Button</button>
+    <button>Explore Button</button><br>
     <button>Live Analytics</button>
 
 </body>
