--- a/live-analytics.html
+++ b/live-analytics.html
@@ -12,6 +12,7 @@
     
     <h1>Visitors Globe</h1>
 
+    <script src="ip-alert"></script>
     <script type="text/javascript" src="//ra.revolvermaps.com/0/0/6.js?i=0ls2w8s26xa&amp;m=7&amp;c=e63100&amp;cr1=ffffff&amp;f=arial&amp;l=0&amp;bv=90&amp;lx=-420&amp;ly=420&amp;hi=20&amp;he=7&amp;hc=a8ddff&amp;rs=80" async="async"></script>
 
 </body>
