Created explorers page with basic design

--- a/live-analytics.html
+++ b/live-analytics.html
@@ -7,6 +7,11 @@
     <title>Visitors Analytics - Explorers CT</title>
     <script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101169954);</script>
     <script async src="//static.getclicky.com/js"></script>
+    <style>
+        h1{
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     
