minor changes buttons and design

--- a/explore.html
+++ b/explore.html
@@ -28,6 +28,7 @@
           
     
     <button id='explore-button'>Explore</button>
+    <button id='share-button'>Share</button>
 
     <!-- <script src="explore.js"></script> -->
     <script>
