creating the share button

--- a/explore.html
+++ b/explore.html
@@ -28,7 +28,14 @@
           
     
     <button id='explore-button'>Explore</button>
-    <button id='share-button'>Share</button>
+    <button id='share-button'>
+
+        <!-- AddToAny BEGIN -->
+        <a class="a2a_dd" href="https://www.addtoany.com/share">Share</a>
+        <script async src="https://static.addtoany.com/menu/page.js"></script>
+        <!-- AddToAny END -->
+
+    </button>
 
     <!-- <script src="explore.js"></script> -->
     <script>
