changes to the share button, again

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <a href="/explore"><button id='explore-button'>Explore</button></a>
 
     <!-- AddToAny BEGIN -->
-    <a class="a2a_dd" href="https://www.addtoany.com/share"><button id='share-button'>Share</button></a>
+    <a class="a2a_dd" href="https://www.addtoany.com/share"><button id='share-button'>Share this page</button></a>
     <script async src="https://static.addtoany.com/menu/page.js"></script>
     <!-- AddToAny END -->
     
