--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Explorer City. Where creators and explorers meet.">
-    <title>Explore the unknown - Explorers CT</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="main.css">
+    <title>Explore the unknown - Explorers CT</title>
 </head>
 <body>
     <h1>Explorers CT</h1>
