Redesigned and info changes

--- a/explore.html
+++ b/explore.html
@@ -17,23 +17,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Explore random pages. Family friendly content">
     <title>Explore Random Pages</title>
-    <link rel="stylesheet" href="main.css">
-    <style>
-            iframe {
-            width: 90vw;
-            height: 85vh;
-            position: fixed;
-            top: 5vh;
-            left: 5vw;
-        }
-    </style>
+    <link rel="stylesheet" href="explore.css">
 </head>
 <body>
 
 
+    <h1>Example of random creation</h1>
+
     <iframe id='iframe' src="" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
         <p>Your browser does not support iframes.</p>
     </iframe>
+
+    <div>
+        <span>Created by: <a href="#">Random Creator</a></span>
+        <span>Support on: <a href="#">Patreon</a></span>
+        <span>Contact on: <a href="#">Social Media</a></span>
+    </div>
 
     
           
