--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Explorer City. Where creators and explorers meet.">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="index.css">
     <title>Explore the unknown - Explorers CT</title>
 </head>
 <body>
@@ -36,16 +36,8 @@
     <br>
 
     <h2>To Do:</h2>
-    <ul>
-        <span>Everything else</span>
-    </ul>
+    <p>A todo list</p>
 
-    <a href="/explore"><button id='explore-button'>Explore</button></a>
-
-    <!-- AddToAny BEGIN -->
-    <a class="a2a_dd" href="https://www.addtoany.com/share"><button id='share-button'>Share this page</button></a>
-    <script async src="https://static.addtoany.com/menu/page.js"></script>
-    <!-- AddToAny END -->
     
 </body>
 </html>
