Added new index page and desgin

--- a/explore.html
+++ b/explore.html
@@ -32,6 +32,7 @@
         <span>Created by: <a href="#">Random Creator</a></span>
         <span>Support on: <a href="#">Patreon</a></span>
         <span>Contact on: <a href="#">Social Media</a></span>
+        <!-- <span>Support this project on: <a href="https://www.patreon.com/ExplorersCT">Patreon</a></span> -->
     </div>
 
     
