--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <a href="/explore"><button id='explore-button'>Explore</button></a>
+    <a href="/explore"><button>Explore</button></a>
 
 </body>
 </html>
