Redesigned home page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
 </head>
 <body>
     
-    <a href="/explore"><button>Explore</button></a>
+    <div id="container">
+        <p class="title" id='the'>the</p>
+        <a href="/explore"><button>Explore</button></a>
+        <p class="title" id='ct'>C T</p>
+    </div>
 
 </body>
 </html>
