--- a/index.html
+++ b/index.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-10649734-18"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-    gtag('config', 'UA-10649734-18');
+        gtag('config', 'UA-10649734-18');
     </script>
-    
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Explorers CT - A mistery website</title>
     <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
-    
+
     <div id="container">
-        <a href="/explore"><button>Explore</button></a>
+        <p class="title" id='city'>City</p>
         <p class="title" id='the'>the</p>
-        <p class="title" id='ct'>C T</p>
+        <a href="/explore">
+            <button>Explore</button>
+        </a>
     </div>
 
 </body>
+
 </html>
