--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Explorers CT - A mistery website</title>
+    <title>Explorers City - A mysterious place!</title>
     <link rel="stylesheet" href="index.css">
 </head>
 
