--- a/about2.html
+++ b/about2.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About Explorers City</title>
-    <link rel="stylesheet" href="explore.css">
+    <link rel="stylesheet" href="about2.css">
 </head>
 
 <body data-gr-c-s-loaded="true">
