--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             }, 100);
 
             setTimeout(function () {
-                window.location.href = "/about2.html";
+                window.location.href = "/explore.html";
             }, 1000);
         };        
     </script>
